--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -31,20 +31,25 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Setup Node.js
+      - name: Install pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 10
+
+      - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v4
         with:
-          node-version: 22.x
-          cache: 'npm'
+          node-version: ${{ matrix.node-version }}
+          cache: 'pnpm'
 
       - name: NPM Audit
-        run: npx audit-ci
+        run: pnpx audit-ci
 
       - name: Install Node Modules
-        run: npm ci
+        run: pnpm i
 
       - name: Build Docs
-        run: npm run generate-docs
+        run: pnpm run generate-docs
 
       - name: Setup Pages
         uses: actions/configure-pages@v5
