--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,39 +23,30 @@ jobs:
         node-version: [20.x, 22.x]
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Install pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 10
 
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
-          cache: 'npm'
+          cache: 'pnpm'
 
       - name: NPM Audit
-        run: npx audit-ci
+        run: pnpx audit-ci
 
       - name: Install Node Modules
-        run: npm ci
+        run: pnpm i
 
       - name: Run Tests and Linting
-        run: npm run test
+        run: pnpm run test
 
       - uses: actions/upload-artifact@v4
         with:
           name: test-reports-${{ matrix.node-version }}
           path: test/reports/
-
-  test-bun:
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/checkout@v4
-      
-      - name: Setup Bun
-        uses: oven-sh/setup-bun@v2
-
-      - name: Install Bun Packages
-        run: bun install --no-save
-      
-      - name: Run Bun Tests
-        run: bun run test
