--- a/package.json
+++ b/package.json
@@ -24,19 +24,19 @@
     "clean": "rm -fr dist/*",
     "compile": "tsc -b ./tsconfig.cjs.json ./tsconfig.esm.json",
     "add-package-jsons": "node ./scripts/addPackageJsons.js",
-    "build": "npm run clean && npm run compile && npm run add-package-jsons",
+    "build": "pnpm run clean && pnpm run compile && pnpm run add-package-jsons",
     "watch": "tsc --watch",
-    "prepublishOnly": "npm run build",
+    "prepublishOnly": "pnpm run build",
     "test:unit": "mocha --recursive --full-trace --exit",
     "test:unit:report": "mocha --recursive --full-trace --exit --reporter json > test/reports/test-results.json",
-    "test": "npm run test:unit:report",
+    "test": "pnpm run test:unit:report",
     "coverage": "c8 mocha && c8 report --reporter=html && c8 report --reporter=json-summary",
     "lcov": "c8 mocha && c8 report --reporter=lcov",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "format": "prettier --log-level warn --write \"**/*.{js,json,jsx,md,ts,tsx,html}\"",
     "format:check": "prettier --check \"**/*.{js,json,jsx,md,ts,tsx,html}\"",
-    "posttest": "npm run lint && npm run format:check",
+    "posttest": "pnpm run lint && pnpm run format:check",
     "generate-docs": "typedoc"
   },
   "repository": {
