--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -44,7 +44,7 @@ jobs:
         run: pnpm i
 
       - name: Run Tests and Linting
-        run: pnpm run test
+        run: ppnpm run test
 
       - uses: actions/upload-artifact@v4
         with:
