--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -49,7 +49,7 @@ jobs:
         run: pnpm i
 
       - name: Build Docs
-        run: ppnpm run generate-docs
+        run: pnpm run generate-docs
 
       - name: Setup Pages
         uses: actions/configure-pages@v5
