--- a/.github/workflows/pr-coverage.yml
+++ b/.github/workflows/pr-coverage.yml
@@ -35,7 +35,7 @@ jobs:
         run: pnpm i
 
       - name: Run Coverage Check
-        run: ppnpm run lcov
+        run: pnpm run lcov
 
       - name: Setup LCOV
         uses: hrishikesh-kadam/setup-lcov@v1
