--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sqs-extended",
+  "name": "@bbc/sqs-extended",
   "version": "0.0.1",
   "description": "Handles large SQS payloads by offloading message bodies to S3 automatically.",
   "type": "module",
